update-css-width

--- a/card.html
+++ b/card.html
@@ -3,7 +3,6 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Animal Trading Cards</title>
-		<link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
 
 		<link rel="stylesheet" href="styles.css">
 	</head>
@@ -34,7 +33,7 @@
 							Brown</li>
 					</ul>
 					<!-- your favorite animal's description goes here -->
-					<p>I Love Coco Bunny , It lives with me for 1 years ago , I enjoy playing with it and feeding it every day with healthy foods like carrots & crap & I wish to make Coco a big family in my house .</p>
+					<p>Coco Bunny , It lives with me for 1 years ago , I enjoy playing with it and feeding it every day with healthy foods like carrots & crap & I wish to make Coco a big family in my house .</p>
 				</div>
 			</div>
 		</body>
