--- a/card.html
+++ b/card.html
@@ -12,29 +12,30 @@
 			<h3>Coco lovey bunny
 			</h3>
 			<!-- your favorite animal's image goes here -->
-			<img src="bunny.png" alt="coco-buuny">
+			<img src="bunny.png" alt="coco buuny">
 			<div class="animal-information">
 				<!-- your favorite animal's interesting fact goes here -->
 				<p class="fun-facts">
 					Rabbits reproduce very quickly. This can be a major headache for people living in agricultural areas where rabbits are seen as pests .
-					<ul>
-						<li>
-							<span>Length:</span>
-							22 CM</li>
-						<li>
-							<span>Name:</span>
-							Coco bunny</li>
-						<li>
-							<span>weight:
-							</span>
-							1.8 K.G</li>
-						<li>
-							<span>eyes color:</span>
-							Brown</li>
-					</ul>
-					<!-- your favorite animal's description goes here -->
-					<p>Coco Bunny , It lives with me for 1 years ago , I enjoy playing with it and feeding it every day with healthy foods like carrots & crap & I wish to make Coco a big family in my house .</p>
-				</div>
+				</p>
+				<ul>
+					<li>
+						<span class="facts-labels">Length:</span>
+						22 CM</li>
+					<li>
+						<span class="facts-labels">Name:</span>
+						Coco bunny</li>
+					<li>
+						<span class="facts-labels">weight:
+						</span>
+						1.8 K.G</li>
+					<li>
+						<span class="facts-labels">eyes color:</span>
+						Brown</li>
+				</ul>
+				<!-- your favorite animal's description goes here -->
+				<p>Coco Bunny , It lives with me for 1 years ago , I enjoy playing with it and feeding it every day with healthy foods like carrots & crap & I wish to make Coco a big family in my house .</p>
 			</div>
-		</body>
-	</html>
+		</div>
+	</body>
+</html>
